# Online-Shopping

./: db.sqlite3  pyproject.toml
src/: db.sqlite3
src/project/: settings.py
