[tool.poetry]
name = "online-shopping"
version = "0.1.0"
description = ""
authors = ["Raneemoqaily7 <raneemoqaily7@gmail.com>"]
readme = "README.md"
packages = [{include = "online_shopping"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
